--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,17 @@
     <string name="example_mail_domain">example@mail.domain</string>
     <string name="phone_number">Phone number</string>
     <string name="select_user_type">Select user type</string>
+    <string name="home">Home</string>
+    <string name="requests">Requests</string>
+    <string name="profile">Profile</string>
+    <string name="job_type">Job Type:</string>
+    <string name="skills">Skills:</string>
+    <string name="required_skills">Required Skills :</string>
+    <string name="more_details">More Details</string>
+    <string name="skill_score">Skill Score needed</string>
+    <string name="job_description">Job Description</string>
+    <string name="apply_job">Apply Job</string>
+    <string name="collapse">collapse</string>
 
     <string-array name="userType">
         <item>Employer</item>
