--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,10 @@
     <string name="add_update_resume">Add/Update Resume</string>
     <string name="cancel">Cancel</string>
     <string name="apply">Apply</string>
+    <string name="upload_job">Upload Job</string>
+    <string name="upload_new_job">Upload New Job</string>
+    <string name="accept_request">Accept Request</string>
+    <string name="delete_job">Delete Job</string>
 
     <string-array name="userType">
         <item>Employer</item>
